[gd_scene load_steps=3 format=3 uid="uid://jow4q8tm6qro"]

[ext_resource type="Script" uid="uid://drho2dsfddk32" path="res://UI/Dialogs/NewPaletteDialog.gd" id="2"]
[ext_resource type="StyleBox" uid="uid://1q61x8arunpe" path="res://UI/Themes/focused_button.tres" id="2_fyetf"]

[node name="NewPaletteDialog" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("2")

[node name="Container" type="Control" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
size_flags_vertical = 0

[node name="SaveButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = ExtResource("2_fyetf")
text = "SAVE"

[node name="CancelButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = ExtResource("2_fyetf")
text = "CANCEL"

[node name="LineEdit" type="LineEdit" parent="Container"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 21.0
placeholder_text = "NEW_PALETTE_DIALOG_PLACEHOLDER"
